Correct layout on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ html, body, #app
 
 #app
 {
-  min-height: 100vh;
+  max-height: 100vh;
   
   .columns{
     margin-bottom: 0;
